Update homepage with keylogger tool

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login Simulator</title>
+  <title>Somto’s Cybersecurity Portfolio</title>
 </head>
 <body>
-  <h1>Welcome to Somto's Login Simulator</h1>
-  <p>This is just a placeholder homepage. Python runs in the background.</p>
+  <h1>Welcome to Somto’s Cybersecurity Portfolio</h1>
+  <p>Explore my Python tools and projects for cybersecurity learning.</p>
+  <ul>
+    <li><a href="login-simulator/">Login Simulator Tool</a></li>
+    <li><a href="password-checker/">Password Strength Checker</a></li>
+  </ul>
 </body>
 </html>
+
